# Terms_of_Enrampagement

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Readme.md  conanfile.py  vcpkg.json
cmake/: clang15-toolchain.cmake  compiler-settings.cmake
src/: application.cpp  benchmark.cpp  challenge.hpp  glfw_dispatcher.cpp  glfw_dispatcher.hpp  main.cpp  reference.hpp  renderer.hpp  tests.cpp  vulkan_renderer.cpp  vulkan_renderer.hpp  vulkan_setup_helper.cpp  vulkan_setup_helper.hpp
src/application/: CMakeLists.txt  application.cpp
src/application/include/application/: application.hpp
src/benchmark/: CMakeLists.txt  benchmark.cpp
src/core/: CMakeLists.txt  actions.hpp
src/graphics/: CMakeLists.txt  glfw_helper.cpp  glfw_helper.hpp  graphics_engine.hpp  vulkan_engine.cpp  vulkan_engine.hpp  vulkan_renderer.cpp  vulkan_renderer.hpp  vulkan_setup_helper.cpp  vulkan_setup_helper.hpp
src/graphics/shaders/: CMakeLists.txt
src/input/: CMakeLists.txt  action_factory.cpp  action_factory.hpp  action_table.cpp  action_table.hpp  dispatcher.hpp  entity_commands.hpp  glfw_input_provider.cpp  glfw_input_provider.hpp  glfw_input_translator.cpp  glfw_input_translator.hpp  input_command_table.cpp  input_command_table.hpp  input_provider.hpp  input_translator.hpp
src/input/glfw/: glfw_input_provider.cpp
src/input/glfw/include/input/: glfw_input_provider.hpp
src/input/include/input/: event.hpp  provider.hpp
src/input/test/: glfw_input_tests.cpp
src/input/tests/: input_tests.cpp
src/math/: CMakeLists.txt  vector.cpp
src/math/include/math/: rect.hpp  vector.hpp
src/math/test/: rect_tests.cpp  vector_tests.cpp
src/program/: application.cpp  application.hpp
src/tests/: tests.cpp
src/utility/: CMakeLists.txt  order_independent_vector.cpp
src/utility/include/utility/: order_independent_vector.hpp
src/utility/test/: order_independent_vector_tests.cpp
